# aqa_practic

./: README.md  pyproject.toml
practice/loops/: loops_practice.py
