[project]
name = "aqa-python-sprint"
version = "0.1.0"
description = ""
authors = [
    {name = "baracuda1989",email = "n9858508501@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "playwright (>=1.53.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
